# ChangeLog for dev-java/xwork
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2009; Alistair Bush <ali_bush@gentoo.org> xwork-1.1.1.ebuild:
  Drop keywords due to unsatisfied deps.
