@@ -1,4 +1,4 @@
 DIST xwork-1.1.1.zip 6340341 RMD160 c2b68960d51217ad93c1f5f3c9148a85e11b4cb5 SHA1 a4e95f340e21f63d3271bb4152e6c4c68f057ef9 SHA256 e6d874ac3f70d3b8d04fb4a89527cbacbef69c8a80139d0f047ef337be184ac1
-EBUILD xwork-1.1.1.ebuild 1552 RMD160 397863ec4b75ba211bc46084d234f28fa57e1f03 SHA1 0bf4b981ad6e2c5faad16626b20caac94faee559 SHA256 92dd64a685478e417b153c25dde55fdc31b38b5a75f29fc741b66f0a5d80d7be
-MISC ChangeLog 228 RMD160 71618b6c4985d20e93e59d0a29d643b883612692 SHA1 2e2d5ae860d5859552c1d377f4a8c8c9fe0d7ad3 SHA256 748aa4133649b19054bd6349b0e928e566116fd15b4d7dbb039948c6099cecf3
+EBUILD xwork-1.1.1.ebuild 1412 RMD160 83f1274e02f7b3fcd248ce873cf6fad6c6cb76a7 SHA1 1dc96b989574f113d2991c625a30050839c39115 SHA256 dbd880f78e230c273257cbcf9f1a822bc3934848c9f450dbd4ba8be89b97aa81
+MISC ChangeLog 321 RMD160 3323d06bd66849115c4e8499c5c2b238f5c20264 SHA1 7a8e3851cb16f5fa57eb3d96c386addb786f36a3 SHA256 8cb145949a0f4992b9bb25ec7dc86c66a25ec985690528292b197b0d1a03d269
 MISC metadata.xml 223 RMD160 3eea44b7fbdbf35f543c9cc3c85818ad94566e2c SHA1 868be92d7dbbdb2e3361d7edec377585265fc55e SHA256 33ac0f91bed9e9bc55848382a55ba60e12bc820ae6f86ad0e8b564c143e045cc
