@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xwork
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Feb 2010; Vlastimil Babka <caster@gentoo.org> xwork-1.1.1.ebuild:
+  Remove java5 flag.
 
   20 Jan 2009; Alistair Bush <ali_bush@gentoo.org> xwork-1.1.1.ebuild:
   Drop keywords due to unsatisfied deps.
